--- a/config.ini
+++ b/config.ini
@@ -62,3 +62,28 @@ TIME_PREPS = in, on
 COP_VERB = is, was, were
 ROOT_TENSE_DEBT = did:VBD, does:VBZ
 SHOW_REL = false
+
+
+[LLM]
+# LLM Interaction mode: KG (Abduction-Deduction with LODO OWL-to-NL response), LLM (only Query/Answer LLM), DUAL (KG+LLM)
+MODE = AD
+# Fol-to_NL Temperature
+TEMP_FOL = 0.1
+# Question Answering Temperature
+TEMP_QA = 0.6
+# Max new token number generation
+MAX_NEW_TOKENS = 512
+# Combination type for Multiple LoRA Adapters: cat (concatenation), linear (linear combination), svd (singular value decomposition)
+COMB_TYPE = cat
+# Combination weights (FOL, QA)
+WEIGHTS = 0.7, 0.1
+# Base model
+BASE_MODEL = /home/fabio/llama/models/7B-chat
+# Adapters names
+ADAPTER_NAME1 = llama-sem_50ep
+ADAPTER_NAME2 = llama-dolly_qa_100ep
+# Adapters path
+ADAPTER_PATH1 = /home/fabio/llama/models/finetuned/llama-fol2_50ep
+ADAPTER_PATH2 = /home/fabio/llama/models/finetuned/llama-dolly_qa_100ep
+# Prefix text for non-hot topic LLM response
+PREFIX_LLM_RESP = Well...I'm not sure, but....
