--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ LANGUAGE = eng
 ASSIGN_RULES_LEMMAS = Be.v.01, Be.v.02, Be.v.05, Be
 ASSIGN_RULES_POS = VBZ, VBP
 # Axioms related words (Upcase)
-AXIOMS_WORDS =
+AXIOMS_WORDS = WHEN
 
 
 [AGENT]
@@ -17,7 +17,7 @@ WAIT_TIME = 20
 # Operations logging
 LOG_ACTIVE = True
 # Ontology filename (.owl)
-FILE_NAME = west.owl
+FILE_NAME = test.owl
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
