working on nl-to-sparql

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ WAIT_TIME = 20
 # Operations logging
 LOG_ACTIVE = True
 # Ontology filename (.owl)
-FILE_NAME = test.owl
+FILE_NAME = west.owl
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
@@ -52,8 +52,12 @@ GMC_POS = NN, NNP, NNS, VBZ, VBP, JJ
 
 
 [LLM]
-# LLM Interaction mode: KG (Abduction-Deduction with LODO OWL-to-NL response), LLM (only Query/Answer LLM), DUAL (KG+LLM)
-MODE = AD
+# Legenda interaction MODE:
+# KG: LODO inference without OWL-to-NL response
+# KGLLM: LODO inference with OWL-to-NL response
+# LLM: only LLM question/response
+# DUAL: (KG+KGLLM)
+MODE = KG
 # Fol-to_NL Temperature
 TEMP_FOL = 0.1
 # Question Answering Temperature
