--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ ASSIGN_RULES_POS = VBZ, VBP
 # Axioms related words (Upcase)
 AXIOMS_WORDS =
 # Lemmatization activation
-LEMMATIZATION = false
+LEMMATIZATION = true
 
 
 
