Building explorative query sparql builder

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ LANGUAGE = eng
 ASSIGN_RULES_LEMMAS = Be.v.01, Be.v.02, Be.v.05, Be
 ASSIGN_RULES_POS = VBZ, VBP
 # Axioms related words (Upcase)
-AXIOMS_WORDS =
+AXIOMS_WORDS = WHEN
 # Lemmatization activation
 LEMMATIZATION = true
 
@@ -20,17 +20,17 @@ WAIT_TIME = 20
 # Operations logging
 LOG_ACTIVE = True
 # Ontology filename (.owl)
-FILE_NAME = west.owl
+FILE_NAME = test.owl
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
-INCLUDE_ACT_POS = false
-INCLUDE_NOUNS_POS = false
-INCLUDE_ADJ_POS = false
-INCLUDE_PRP_POS = false
-INCLUDE_ADV_POS = false
-# Object adjective into noun correction (WARNING: false only with GEN_ADJ = false)
-OBJ_JJ_TO_NOUN = false
+INCLUDE_ACT_POS = true
+INCLUDE_NOUNS_POS = true
+INCLUDE_ADJ_POS = true
+INCLUDE_PRP_POS = true
+INCLUDE_ADV_POS = true
+# Object adjective into noun correction
+OBJ_JJ_TO_NOUN = true
 
 
 # POS Predicate labels encoding with WordNet synsets
