setting up nl-to-sparql

--- a/config.ini
+++ b/config.ini
@@ -31,6 +31,8 @@ INCLUDE_PRP_POS = true
 INCLUDE_ADV_POS = true
 # Object adjective into noun correction
 OBJ_JJ_TO_NOUN = true
+# Separator
+SEP = _
 
 
 # POS Predicate labels encoding with WordNet synsets
