--- a/config.ini
+++ b/config.ini
@@ -58,7 +58,7 @@ GMC_POS = NN, NNP, NNS, VBZ, VBP, JJ
 
 [LLM]
 # Legenda interaction MODE:
-# KG: LODO inference without OWL-to-NL response
+# KG: LODO inference without OWL-to-NL response (logical forms)
 # KGLLM: LODO inference with OWL-to-NL response
 # LLM: only LLM question/response
 # DUAL: (KG+KGLLM)
