--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,6 @@ AXIOMS_WORDS = WHEN
 LEMMATIZATION = true
 
 
-
 [AGENT]
 # Waiting seconds before returning to idle state
 WAIT_TIME = 20
@@ -21,6 +20,15 @@ WAIT_TIME = 20
 LOG_ACTIVE = True
 # Ontology filename (.owl)
 FILE_NAME = test.owl
+
+
+[REASONING]
+ACTIVE = false
+# HERMIT, PELLET
+REASONER = HERMIT
+# SPARQL queries Prefixes
+PREFIXES =  PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>, PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>,
+
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
