--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ FILE_NAME = test.owl
 
 
 [REASONING]
-ACTIVE = false
+ACTIVE = true
 # HERMIT, PELLET
 REASONER = HERMIT
 # SPARQL queries Prefixes
@@ -69,7 +69,7 @@ GMC_POS = NN, NNP, NNS, VBZ, VBP, JJ
 # KG: LODO inference without OWL-to-NL response (logical forms)
 # KGLLM: LODO inference with OWL-to-NL response
 # LLM: only LLM question/response
-# DUAL: (KG+KGLLM)
+# DUAL: (LLM+KGLLM)
 MODE = KG
 # Fol-to_NL Temperature
 TEMP_FOL = 0.1
