--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ LANGUAGE = eng
 ASSIGN_RULES_LEMMAS = Be.v.01, Be.v.02, Be.v.05, Be
 ASSIGN_RULES_POS = VBZ, VBP
 # Axioms related words (Upcase)
-AXIOMS_WORDS = WHEN
+AXIOMS_WORDS =
 # Lemmatization activation
 LEMMATIZATION = true
 
