--- a/config.ini
+++ b/config.ini
@@ -89,5 +89,7 @@ ADAPTER_NAME2 = llama-dolly_qa_100ep
 # Adapters path
 ADAPTER_PATH1 = /home/fabio/llama/models/finetuned/llama-fol2_50ep
 ADAPTER_PATH2 = /home/fabio/llama/models/finetuned/llama-dolly_qa_100ep
-# Prefix text for non-hot topic LLM response
-PREFIX_LLM_RESP = Well...I'm not sure, but....
+# Forced response from LLM when unknown
+FORCED_ANSWER_FROM_LLM = true
+# Word replacer for blank, to force above response from LLM
+REPLACER = whatever
