--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,8 @@ LANGUAGE = eng
 # lemmas triggering assignment rules
 ASSIGN_RULES_LEMMAS = Be.v.01, Be.v.02, Be.v.05, Be
 ASSIGN_RULES_POS = VBZ, VBP
-# Axioms related words (Upcase)
-AXIOMS_WORDS =
+# Axioms related words (Upcase) IF/AS/WHILE/WHEN - Important: in case of WHEN be sure to remove it after assertions
+AXIOMS_WORDS = IF
 # Lemmatization activation
 LEMMATIZATION = true
 
