--- a/config.ini
+++ b/config.ini
@@ -66,11 +66,12 @@ GMC_POS = NN, NNP, NNS, VBZ, VBP, JJ
 
 [LLM]
 # Legenda interaction MODE:
-# KG: LODO inference without OWL-to-NL response (logical forms)
-# KGLLM: LODO inference with OWL-to-NL response
-# LLM: only LLM question/response
-# DUAL: (LLM+KGLLM)
-MODE = KG
+# * KG (only OWL inference)
+# * KGLLM (OWL inference OWL-to-NL from LLM response)
+# * LLM (only LLM inference)
+# * DUAL (KGLLM+LLM)
+
+MODE = KGLLM
 # Fol-to_NL Temperature
 TEMP_FOL = 0.1
 # Question Answering Temperature
