--- a/config.ini
+++ b/config.ini
@@ -67,7 +67,7 @@ GMC_POS = NN, NNP, NNS, VBZ, VBP, JJ
 [LLM]
 # Legenda interaction MODE:
 # * KG (only OWL inference)
-# * KGLLM (OWL inference OWL-to-NL from LLM response)
+# * KGLLM (OWL inference with LF-to-NL response)
 # * LLM (only LLM inference)
 # * DUAL (KGLLM+LLM)
 
